--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -1,13 +1,4 @@
 {
-  "detDelToTrash": "Diesen Eintrag löschen?",
-  "detDelToTrashBody": "Der Eintrag wird in den Papierkorb verschoben.",
-  "setGenThemeMacDark": "macOS Dunkel",
-  "setFileSaveToHtml": "HTML",
-  "exportFileInfo": "Dateiinformationen",
-  "exportHtmlName": "Name",
-  "exportHtmlDate": "Exportdatum",
-  "exportGenerator": "Software",
-  "exportDescription": "Diese Datei wurde mit {} erstellt.",
   "months": [
     "Januar",
     "Februar",
@@ -267,6 +258,8 @@
   "detDelFromTrash": "Aus dem Papierkorb löschen?",
   "detDelFromTrashBody": "Es wird keine Möglichkeit zur Wiederherstellung geben.",
   "detDelFromTrashBodyHint": "Um alle Dateien aus dem Papierkorb zu entfernen, klicken Sie auf das “Papierkorb” leeren-Icon im Papierkorb-Menüpunkt.",
+  "detDelToTrash": "Diesen Eintrag löschen?",
+  "detDelToTrashBody": "Der Eintrag wird in den Papierkorb verschoben.",
   "detFieldCopied": "Kopiert",
   "detFieldCopiedTime": "Kopiert für {} Sekunden",
   "detCopyHint": "Sie können den Inhalt eines Feldes kopieren, indem Sie auf seine Beschriftung klicken",
@@ -280,6 +273,7 @@
   "detMenuCopyUser": "Benutzer kopieren",
   "detSetupOtp": "Einweg-Passwörter",
   "detClone": "Kopie erstellen",
+  "detCopyEntryToClipboard": "Alle Felder kopieren",
   "detClonedName": "Kopie",
   "detAutoType": "Auto-Type",
   "detAutoTypeSettings": "Auto-Type Einstellungen",
@@ -309,6 +303,9 @@
   "detOtpQrWrongBody": "Ihr QR-Code wurde erfolgreich eingelesen, enthält jedoch kein Einweg-Passwort.",
   "detLockField": "Dieses Feld sperren, damit der Inhalt nicht durchsuchbar ist und angezeigt wird. Um ihn anzuzeigen, muss er angeklickt werden.",
   "detUnlockField": "Dieses Feld entsperren. Dies führt dazu, dass der Inhalt direkt angezeigt wird und durchsuchbar ist.",
+  "detRevealField": "Anzeigen",
+  "detHideField": "Verbergen",
+  "detAutoTypeField": "Auto-Type",
   "autoTypeEntryFields": "Feld-Platzhalter",
   "autoTypeModifiers": "Hilfstasten",
   "autoTypeKeys": "Tasten",
@@ -324,6 +321,8 @@
   "autoTypeSelectionHint": "Die Auto-Type Abfolge eintippen",
   "autoTypeSelectionHintAction": "Nur das Passwort eintippen",
   "autoTypeSelectionHintOpt": "Nur den Benutzernamen eintippen",
+  "autoTypeSelectionHintShift": "Andere Folder",
+  "autoTypeSelectionOtp": "Einweg-Passwort",
   "appSecWarn": "Unsichere Verbindung!",
   "appSecWarnBody1": "Sie haben diese App über eine ungesicherte Verbindung geöffnet, Sie könnten beobachtet und Ihre Passwörter könnten gestohlen werden. Wir empfehlen Ihnen dringend, die App hier nicht weiter zu nutzen, wenn Sie nicht genau wissen, was Sie tun.",
   "appSecWarnBody2": "Ihre Datenbank ist zwar verschlüsselt, aber es kann nicht sichergestellt werden, dass die App nicht auf dem Web vom Server zu Ihrem Browser manipuliert wurde.",
@@ -378,6 +377,7 @@
   "setGenThemeHc": "High contrast",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
+  "setGenThemeMacDark": "macOS Dunkel",
   "setGenLocale": "Sprache",
   "setGenLocOther": "Andere Sprachen sind als Plugins verfügbar.",
   "setGenFontSize": "Schriftgröße",
@@ -436,6 +436,7 @@
   "setFileSync": "Synchronisierung",
   "setFileSyncVerb": "Synchronisieren",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Letzte Synchronisierung",
   "setFileLastSyncUnknown": "unbekannt",
   "setFileSyncInProgress": "Synchronisierung läuft",
@@ -488,6 +489,7 @@
   "setFileUnsavedBody": "Es gibt ungespeicherte Änderungen in dieser Datei",
   "setFileCloseNoSave": "Sperren und Änderungen verwerfen",
   "setFileDontClose": "Nicht sperren",
+  "setFileFormatVersion": "Dateiformat",
   "setShTitle": "Tastenkürzel",
   "setShShowAll": "alle Einträge anzeigen",
   "setShColors": "mit Farben markierte Einträge anzeigen",
@@ -510,6 +512,7 @@
   "setShCopyUrlGlobal": "Website kopieren (wenn die App im Hintergrund ist)",
   "setShAutoTypeGlobal": "Auto-Type (wenn die App im Hintergrund ist)",
   "setShLock": "Datenbank sperren",
+  "setShEdit": "Drücken Sie eine Tastenkombination, um diese als Kürzel zu setzen",
   "setPlInstallTitle": "Neue Plugins installieren",
   "setPlInstallDesc": "KeeWeb-Plugins fügen Funktionen, Themes und Sprachen zu KeeWeb hinzu. Plugins werden mit denselben Rechten ausgeführt wie KeeWeb selbst, sie können auf all Ihre Passwörter zugreifen oder diese ändern. Installieren Sie niemals Plugins, denen Sie nicht vertrauen.",
   "setPlInstallLabel": "Plugin-URL",
@@ -578,5 +581,15 @@
   "launcherSave": "Passwort-Datenbank speichern",
   "launcherFileFilter": "KeePass-Dateien",
   "authPopupRequired": "Pop-Ups blockiert",
-  "authPopupRequiredBody": "Bitte erlauben Sie Pop-Ups für diese App in Ihrem Browser."
+  "authPopupRequiredBody": "Bitte erlauben Sie Pop-Ups für diese App in Ihrem Browser.",
+  "exportFileInfo": "Dateiinformationen",
+  "exportHtmlName": "Name",
+  "exportHtmlDate": "Exportdatum",
+  "exportGenerator": "Software",
+  "exportDescription": "Diese Datei wurde mit {} erstellt.",
+  "importCsvTitle": "Aus CSV importieren",
+  "importCsvRun": "Importieren",
+  "importIgnoreField": "Ignorieren",
+  "importTo": "Einträge werden importiert nach:",
+  "importNewFile": "Neue Datei"
 }
