--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -1,13 +1,4 @@
 {
-  "detDelToTrash": "¿Eliminar la entrada?",
-  "detDelToTrashBody": "La entrada se moverá a la papelera.",
-  "setGenThemeMacDark": "Modo oscuro de macOS",
-  "setFileSaveToHtml": "HTML",
-  "exportFileInfo": "Información de archivo",
-  "exportHtmlName": "Nombre",
-  "exportHtmlDate": "Fecha de exportación",
-  "exportGenerator": "Software",
-  "exportDescription": "Este archivo está generado con {}.",
   "months": [
     "Enero",
     "Febrero",
@@ -122,9 +113,9 @@
   "genShowPass": "Mostrar contraseña",
   "grpTitle": "Grupo",
   "grpSearch": "Habilitar la búsqueda de entradas en este grupo",
-  "grpAutoType": "Habilitar autocompletado",
-  "grpAutoTypeSeq": "Secuencia de autocompletado",
-  "grpAutoTypeSeqDefault": "Usar autocompletado predeterminado",
+  "grpAutoType": "Activar auto-completado",
+  "grpAutoTypeSeq": "Secuencia de auto-completado",
+  "grpAutoTypeSeqDefault": "Usar secuencia de auto-completado predeterminada",
   "grpTrash": "Eliminar grupo con todas las entradas",
   "tagTitle": "Etiqueta",
   "tagTrash": "Eliminar etiqueta de todas las entradas",
@@ -267,6 +258,8 @@
   "detDelFromTrash": "¿Eliminar de la papelera?",
   "detDelFromTrashBody": "No podrás volver a recuperarlo.",
   "detDelFromTrashBodyHint": "Para eliminar rápidamente el contenido de la papelera, haz clic sobre el icono Vaciar en el menú Papelera.",
+  "detDelToTrash": "¿Eliminar la entrada?",
+  "detDelToTrashBody": "La entrada se moverá a la papelera.",
   "detFieldCopied": "Copiado",
   "detFieldCopiedTime": "Copiado por {} segundos",
   "detCopyHint": "Puedes copiar el valor del campo haciendo clic sobre su título",
@@ -280,14 +273,15 @@
   "detMenuCopyUser": "Copiar usuario",
   "detSetupOtp": "Contraseñas de un solo uso",
   "detClone": "Hacer una copia",
+  "detCopyEntryToClipboard": "Copiar todos los campos",
   "detClonedName": "Copiar",
-  "detAutoType": "Autocompletado",
-  "detAutoTypeSettings": "Opciones de auto-tecleo",
-  "detAutoTypeEnabled": "Activar autocompletado para esta entrada",
-  "detAutoTypeSequence": "Tecleos",
+  "detAutoType": "Auto-completado",
+  "detAutoTypeSettings": "Opciones de auto-completado",
+  "detAutoTypeEnabled": "Activar auto-completado para esta entrada",
+  "detAutoTypeSequence": "Pulsaciones",
   "detAutoTypeInput": "Entrada",
   "detAutoTypeShortcutsDesc": "{} o {} mientras esta aplicación está inactiva",
-  "detAutoTypeObfuscation": "Mezclar tecleo real y aleatorio",
+  "detAutoTypeObfuscation": "Mezclar pulsaciones reales y aleatorias",
   "detAutoTypeWindow": "Ventana",
   "detAutoTypeInputWindow": "Título de ventana",
   "detSetupOtpAlert": "Escanear código QR",
@@ -309,21 +303,26 @@
   "detOtpQrWrongBody": "Se ha escaneado tu código QR pero no contiene información de contraseñas de un solo uso.",
   "detLockField": "Bloquea este campo para que su contenido no sea visible ni localizable con una búsqueda. Para mostrar el contenido de este campo tendrás que hacer clic sobre él.",
   "detUnlockField": "Desbloquea este campo para hacer su contenido visible y localizable con una búsqueda.",
+  "detRevealField": "Revelar",
+  "detHideField": "Ocultar",
+  "detAutoTypeField": "Auto-completado",
   "autoTypeEntryFields": "Campos de entrada",
   "autoTypeModifiers": "Teclas modificadoras",
   "autoTypeKeys": "Teclas",
   "autoTypeLink": "más...",
-  "autoTypeError": "Error de autocompletado",
-  "autoTypeErrorGeneric": "Hubo un error realizando el autocompletado: {}",
-  "autoTypeErrorGlobal": "Para usar un atajo de teclado en todo el sistema, por favor abre la aplicación en la que quieres teclear tu contraseña",
+  "autoTypeError": "Error de auto-completado",
+  "autoTypeErrorGeneric": "Hubo un error realizando el auto-completado: {}",
+  "autoTypeErrorGlobal": "Por favor, abre la aplicación en la que quieres introducir tu contraseña para utilizar un atajo de teclado global",
   "autoTypeErrorNotInstalled": "{} no está instalado",
-  "autoTypeHeader": "Autocompletado: Seleccionar",
+  "autoTypeHeader": "Auto-completado: Seleccionar",
   "autoTypeMsgNoWindow": "No hemos podido obtener el título de la ventana activa, tecléalo o búscalo",
   "autoTypeMsgMatchedByWindow": "Seleccionar una contraseña para {}",
   "autoTypeNoMatches": "sin coincidencias",
   "autoTypeSelectionHint": "Escribe la secuencia de autocompletado",
   "autoTypeSelectionHintAction": "Solo escribe la contraseña",
   "autoTypeSelectionHintOpt": "Solo escribe el usuario",
+  "autoTypeSelectionHintShift": "Otros campos",
+  "autoTypeSelectionOtp": "Contraseña de uso único",
   "appSecWarn": "¡No seguro!",
   "appSecWarnBody1": "Has cargado esta aplicación mediante una conexión insegura. Alguien podría estar observando tu tráfico y robando tus contraseñas. Te aconsejamos no continuar, a no ser que comprendas perfectamente lo que estás haciendo.",
   "appSecWarnBody2": "Sí, tu base de datos está cifrada, pero nadie te puede garantizar que la aplicación no haya sido modificada antes de llegar a ti.",
@@ -378,6 +377,7 @@
   "setGenThemeHc": "Alto contraste",
   "setGenThemeSd": "Solarizado oscuro",
   "setGenThemeSl": "Solarizado claro",
+  "setGenThemeMacDark": "Modo oscuro de macOS",
   "setGenLocale": "Idioma",
   "setGenLocOther": "otros idiomas están disponibles como complementos",
   "setGenFontSize": "Tamaño letra",
@@ -391,7 +391,7 @@
   "setGenShowSubgroups": "Mostrar entradas de todos los subgrupos",
   "setGenTableView": "Mostrar lista de entradas como un panel horizontal",
   "setGenColorfulIcons": "Iconos propios con color en la lista",
-  "setGenDirectAutotype": "Si se encuentra una única entrada, escogerla automáticamente para Auto-tecleo.",
+  "setGenDirectAutotype": "Si se encuentra una única entrada, escogerla automáticamente para auto-completado.",
   "setGenFunction": "Función",
   "setGenAutoSyncOnClose": "Guardar y sincronizar automáticamente al cerrar",
   "setGenAutoSyncTimer": "Guardar y sincronizar periódicamente de forma automática",
@@ -415,7 +415,7 @@
   "setGenLock": "Auto bloqueo",
   "setGenLockMinimize": "Cuando la app está minimizada",
   "setGenLockCopy": "Al copiar contraseña",
-  "setGenLockAutoType": "En auto-tecleo",
+  "setGenLockAutoType": "En auto-completado",
   "setGenLockOrSleep": "Cuando el ordenador esté bloqueado o suspendido",
   "setGenStorage": "Almacenamiento",
   "setGenShowAdvanced": "Mostrar opciones avanzadas",
@@ -436,6 +436,7 @@
   "setFileSync": "Sincronizar",
   "setFileSyncVerb": "Sincronizar",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Última sinc.",
   "setFileLastSyncUnknown": "desconocido",
   "setFileSyncInProgress": "sinc. en progreso",
@@ -488,6 +489,7 @@
   "setFileUnsavedBody": "Hay cambios sin guardar en este archivo",
   "setFileCloseNoSave": "Cerrar y perder cambios",
   "setFileDontClose": "No cerrar",
+  "setFileFormatVersion": "Formato de archivo",
   "setShTitle": "Atajos",
   "setShShowAll": "ver todos los elementos",
   "setShColors": "ver elementos con colores",
@@ -497,7 +499,7 @@
   "setShCopyPass": "copiar contraseña o campo seleccionado",
   "setShCopyUser": "copiar usuario",
   "setShCopyUrl": "copiar sitio web",
-  "setShAutoType": "autocompletado entrada seleccionada",
+  "setShAutoType": "auto-completar entrada seleccionada",
   "setShPrev": "volver al elemento anterior",
   "setShNext": "ir al siguiente elemento",
   "setShCreateEntry": "crear entrada",
@@ -510,6 +512,7 @@
   "setShCopyUrlGlobal": "copiar sitio web (cuando la app está en segundo plano)",
   "setShAutoTypeGlobal": "auto-completado (cuando la app está en segundo plano)",
   "setShLock": "bloquear base de datos",
+  "setShEdit": "Presiona una nueva combinación de teclas para usarla como atajo de teclado",
   "setPlInstallTitle": "Instalar nuevos complementos",
   "setPlInstallDesc": "Los complementos incorporan funcionalidades, temas e idiomas a KeeWeb. Los complementos se ejecutan con los mismos privilegios que KeeWeb y pueden tener acceso o modificar tus contraseñas. Nunca instales complementos en los que no confíes.",
   "setPlInstallLabel": "URL del complemento",
@@ -578,5 +581,15 @@
   "launcherSave": "Guardar base de datos de contraseñas",
   "launcherFileFilter": "Archivos KeePass",
   "authPopupRequired": "Las ventanas emergentes están bloqueadas",
-  "authPopupRequiredBody": "Por favor, permite pop-ups en tu navegador o vuelve a intentarlo."
+  "authPopupRequiredBody": "Por favor, permite pop-ups en tu navegador o vuelve a intentarlo.",
+  "exportFileInfo": "Información de archivo",
+  "exportHtmlName": "Nombre",
+  "exportHtmlDate": "Fecha de exportación",
+  "exportGenerator": "Software",
+  "exportDescription": "Este archivo está generado con {}.",
+  "importCsvTitle": "Importar desde CSV",
+  "importCsvRun": "Importar",
+  "importIgnoreField": "Ignorar",
+  "importTo": "Las entradas serán importadas a",
+  "importNewFile": "Nuevo archivo"
 }
