--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -1,13 +1,4 @@
 {
-  "detDelToTrash": "Supprimer l'entrée ?",
-  "detDelToTrashBody": "L'entrée sera déplacée dans la corbeille.",
-  "setGenThemeMacDark": "Mode sombre de macOS",
-  "setFileSaveToHtml": "HTML",
-  "exportFileInfo": "Propriétés du fichier",
-  "exportHtmlName": "Nom",
-  "exportHtmlDate": "Date d'exportation",
-  "exportGenerator": "Logiciel",
-  "exportDescription": "Ce fichier est généré par {}.",
   "months": [
     "Janvier",
     "Février",
@@ -267,6 +258,8 @@
   "detDelFromTrash": "Supprimer de la Corbeille ?",
   "detDelFromTrashBody": "Vous ne pourrez plus le récupérer.",
   "detDelFromTrashBodyHint": "Pour supprimer tous les éléments de la Corbeille, cliquez l’icône \"Vider la corbeille\" du menu Corbeille.",
+  "detDelToTrash": "Supprimer l'entrée ?",
+  "detDelToTrashBody": "L'entrée sera déplacée dans la corbeille.",
   "detFieldCopied": "Copié",
   "detFieldCopiedTime": "Copié pendant {} secondes",
   "detCopyHint": "Vous pouvez copier la valeur du champ en cliquant sur son titre",
@@ -280,6 +273,7 @@
   "detMenuCopyUser": "Copier nom",
   "detSetupOtp": "Mots de passe à usage unique",
   "detClone": "Dupliquer",
+  "detCopyEntryToClipboard": "Copier tous les champs",
   "detClonedName": "Copier",
   "detAutoType": "Saisie auto",
   "detAutoTypeSettings": "Paramètres saisie auto",
@@ -309,6 +303,9 @@
   "detOtpQrWrongBody": "Votre QR code a été scanné avec succès mais il ne contient pas d'information pour un mot de passe à usage unique.",
   "detLockField": "Verrouiller ce champ, ainsi son contenu ne sera pas visible ni ne pourra être cherché. Visualiser son contenu exigera de le cliquer explicitement.",
   "detUnlockField": "Déverrouiller ce champ, rendant son contenu immédiatement visible et pouvant être cherché",
+  "detRevealField": "Révéler",
+  "detHideField": "Cacher",
+  "detAutoTypeField": "Saisie auto",
   "autoTypeEntryFields": "Champs",
   "autoTypeModifiers": "Touches modificatrices",
   "autoTypeKeys": "Clés",
@@ -324,6 +321,8 @@
   "autoTypeSelectionHint": "Saisissez la séquence automatique",
   "autoTypeSelectionHintAction": "Entrez seulement le mot de passe",
   "autoTypeSelectionHintOpt": "Entrez seulement le compte",
+  "autoTypeSelectionHintShift": "Autres champs",
+  "autoTypeSelectionOtp": "Mot de passe à usage unique",
   "appSecWarn": "Non sécurisé !",
   "appSecWarnBody1": "Vous avez chargé cette appli avec une connexion non sécurisée. Quelqu'un peut vous observer et voler vos mots de passe. Nous vous recommandons fortement d'arrêter cette connexion, à moins que vous ne compreniez exactement ce que vous faites.",
   "appSecWarnBody2": "Oui, votre base est chiffrée mais personne ne peut garantir que l'application n'a pas été modifiée avant d'arriver à vous.",
@@ -378,6 +377,7 @@
   "setGenThemeHc": "Contraste élevé",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
+  "setGenThemeMacDark": "Mode sombre de macOS",
   "setGenLocale": "Langue",
   "setGenLocOther": "d'autres langues sont disponibles en tant que modules",
   "setGenFontSize": "Taille de police",
@@ -436,6 +436,7 @@
   "setFileSync": "Sync",
   "setFileSyncVerb": "Synchroniser",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Dernière synchro",
   "setFileLastSyncUnknown": "inconnu",
   "setFileSyncInProgress": "synchronisation en cours",
@@ -488,6 +489,7 @@
   "setFileUnsavedBody": "Il y a des modifications non sauvegardées dans ce fichier",
   "setFileCloseNoSave": "Fermer et perdre les modifs",
   "setFileDontClose": "Ne pas fermer",
+  "setFileFormatVersion": "Format de fichier",
   "setShTitle": "Raccourcis",
   "setShShowAll": "montrer tout",
   "setShColors": "montrer les champs en couleur",
@@ -510,6 +512,7 @@
   "setShCopyUrlGlobal": "copier le site web (quand l'appli est en arrière-plan)",
   "setShAutoTypeGlobal": "saisie automatique (quand l'appli est en arrière-plan)",
   "setShLock": "verrouiller la base",
+  "setShEdit": "Appuyez sur une nouvelle combinaison de touches pour la définir comme raccourci.",
   "setPlInstallTitle": "Installer de nouveaux modules",
   "setPlInstallDesc": "Les modules (plugins) de KeeWeb ajoutent des fonctionnalités, thèmes et langues à KeeWeb. Les modules sont lancés avec les même privilèges que KeeWeb : ils peuvent accéder et gérer tous vos mots de passe. Ne jamais installer de modules auxquels vous ne faites pas confiance.",
   "setPlInstallLabel": "URL du module",
@@ -578,5 +581,15 @@
   "launcherSave": "Sauvegarder base des mots de passe",
   "launcherFileFilter": "Fichiers Keepass",
   "authPopupRequired": "Les pop-up sont bloquées",
-  "authPopupRequiredBody": "Merci d'autoriser les pop-ups pour cette appli dans votre navigateur ou essayez à nouveau."
+  "authPopupRequiredBody": "Merci d'autoriser les pop-ups pour cette appli dans votre navigateur ou essayez à nouveau.",
+  "exportFileInfo": "Propriétés du fichier",
+  "exportHtmlName": "Nom",
+  "exportHtmlDate": "Date d'exportation",
+  "exportGenerator": "Logiciel",
+  "exportDescription": "Ce fichier est généré par {}.",
+  "importCsvTitle": "Import depuis un CSV",
+  "importCsvRun": "Importer",
+  "importIgnoreField": "Ignorer",
+  "importTo": "Les entrées seront importées dans",
+  "importNewFile": "Nouveau fichier"
 }
