--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -1,12 +1,4 @@
 {
-  "detDelToTrash": "Töröljem a bejegyzést?",
-  "detDelToTrashBody": "A bejegyzés átkerül a lomtár mappába.",
-  "setGenThemeMacDark": "macOS Dark",
-  "setFileSaveToHtml": "HTML",
-  "exportFileInfo": "File információ",
-  "exportHtmlName": "Név",
-  "exportHtmlDate": "Exportálás dátuma",
-  "exportGenerator": "Szoftver",
   "months": [
     "Január",
     "Február",
@@ -45,7 +37,7 @@
     "Szombat"
   ],
   "weekdaysShort": [
-    "V",
+    "Vas",
     "H",
     "K",
     "Sze",
@@ -266,6 +258,8 @@
   "detDelFromTrash": "Törlés a lomtárból?",
   "detDelFromTrashBody": "Nem tudja később visszaállítani.",
   "detDelFromTrashBodyHint": "A lomtár összes elemének gyors törléséhez kattintson az ürítés ikonra a Lomtár menüjében.",
+  "detDelToTrash": "Töröljem a bejegyzést?",
+  "detDelToTrashBody": "A bejegyzés átkerül a lomtár mappába.",
   "detFieldCopied": "Másolva",
   "detFieldCopiedTime": "Másolva {} másodpercre",
   "detCopyHint": "A mező értékét kimásolhatja a címére történő kattintással",
@@ -279,6 +273,7 @@
   "detMenuCopyUser": "Felhasználónév másolása",
   "detSetupOtp": "Egyszer használatos jelszó",
   "detClone": "Másolat készítése",
+  "detCopyEntryToClipboard": "Minden mező másolása",
   "detClonedName": "Másol",
   "detAutoType": "Automatikus gépelés",
   "detAutoTypeSettings": "Automatikus gépelés beállítása",
@@ -323,6 +318,8 @@
   "autoTypeSelectionHint": "Írja be az automatikus gépelési sorrendet",
   "autoTypeSelectionHintAction": "Csak a jelszót írja be",
   "autoTypeSelectionHintOpt": "Csak a felhasználói nevet írja be",
+  "autoTypeSelectionHintShift": "Egyéb mezők",
+  "autoTypeSelectionOtp": "Egyszer használatos jelszó",
   "appSecWarn": "Nem biztonságos!",
   "appSecWarnBody1": "Ezt az alkalmazást nem biztonságos kapcsolaton keresztül töltötte be. Valaki megfigyelheti és ellophatja a jelszavait. Erősen javasoljuk, hogy csak akkor folytassa, ha pontosan tudja, hogy mit csinál.",
   "appSecWarnBody2": "Igen, az adatbázisa titkosított, de senki nem garantálhatja azt, hogy az alkalmazás nem lett módosítva letöltés közben.",
@@ -377,6 +374,7 @@
   "setGenThemeHc": "Nagykontrasztú",
   "setGenThemeSd": "Beégetett sötét",
   "setGenThemeSl": "Beégetett világos",
+  "setGenThemeMacDark": "macOS Dark",
   "setGenLocale": "Nyelv",
   "setGenLocOther": "további nyelvek beépülőként érhetők el",
   "setGenFontSize": "Betűméret",
@@ -435,6 +433,7 @@
   "setFileSync": "Szinkronizálás",
   "setFileSyncVerb": "Szinkronizál",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Utolsó szinkronizálás",
   "setFileLastSyncUnknown": "ismeretlen",
   "setFileSyncInProgress": "szinkronizálás folyamatban",
@@ -487,6 +486,7 @@
   "setFileUnsavedBody": "Nem mentett módosítások vannak ebben a fájlban.",
   "setFileCloseNoSave": "Bezárás és módosítások elvesztése",
   "setFileDontClose": "Ne zárja be",
+  "setFileFormatVersion": "Fájlformátum",
   "setShTitle": "Gyorsbillentyűk",
   "setShShowAll": "minden elem megjelenítése",
   "setShColors": "színezett elemek megjelenítése",
@@ -509,6 +509,7 @@
   "setShCopyUrlGlobal": "weboldal másolása (amikor az alkalmazás háttérben van)",
   "setShAutoTypeGlobal": "automatikus gépelés (amikor az alkalmazás háttérben van)",
   "setShLock": "adatbázis zárolása",
+  "setShEdit": "Üss le egy billentyűkombinációt, hogy beállítsd billentyűparancsnak",
   "setPlInstallTitle": "Új beépülők telepítése",
   "setPlInstallDesc": "A KeeWeb beépülők kiegészítéseket, témákat, és nyelveket adnak hozzá a KeeWeb-hez. A beépülők ugyanazokkal a jogosultságokkal futnak mint a KeeWeb, hozzáférhetnek és kezelhetik az ön összes jelszavát. Soha ne telepítsen olyan beépülőt amiben nem bízik meg.",
   "setPlInstallLabel": "Beépülő URL",
@@ -525,7 +526,7 @@
   "setPlLoc": "nyelv",
   "setPlCreatedBy": "Készítette: {}",
   "setPlLoadTime": "betöltése {}-t vesz igénybe",
-  "setPlLastUpdate": "Frissítések utolsó ellenőrzése",
+  "setPlLastUpdate": "Frissítések utoljára ellenőrizve",
   "setPlLoadError": "beépülő betöltése során hiba lépett fel",
   "setPlGalleryLoading": "Beépülők betöltése, kérem várjon",
   "setPlGalleryLoadError": "Beépülők betöltése során hiba lépett fel",
@@ -577,5 +578,13 @@
   "launcherSave": "Jelszó adatbázis mentése",
   "launcherFileFilter": "KeePass fájlok",
   "authPopupRequired": "Az előugró ablakok blokkoltak",
-  "authPopupRequiredBody": "Kérem engedélyezze böngészőjében az előugró ablakokat ehhez az alkalmazáshoz, vagy próbálja újra."
+  "authPopupRequiredBody": "Kérem engedélyezze böngészőjében az előugró ablakokat ehhez az alkalmazáshoz, vagy próbálja újra.",
+  "exportFileInfo": "File információ",
+  "exportHtmlName": "Név",
+  "exportHtmlDate": "Exportálás dátuma",
+  "exportGenerator": "Szoftver",
+  "exportDescription": "{} által generált fájl.",
+  "importCsvTitle": "Importálás CSV-ből",
+  "importCsvRun": "Importálás",
+  "importIgnoreField": "Mellőz"
 }
