--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -109,6 +109,8 @@
   "genPresetMac": "MACアドレス",
   "genPresetHash128": "128-bit hash",
   "genPresetHash256": "256-bit hash",
+  "genHidePass": "パスワードを隠す",
+  "genShowPass": "パスワードを表示する",
   "grpTitle": "グループ",
   "grpSearch": "このグループの登録項目の検索を有効にする",
   "grpAutoType": "自動入力を有効にする",
@@ -215,6 +217,7 @@
   "openErrorFileNotFound": "ファイルが見つかりません",
   "openListErrorBody": "ファイルを開くときにエラーが発生しました",
   "openShowAllFiles": "全ファイルを表示",
+  "openFileNoCacheError": "キャッシュストレージにファイルが見つかりません。 これは、ブラウザのストレージがクリーンアップされたために発生する可能性があります。 ファイルを開くには、KeeWebから削除して再度追加します。",
   "detAttDownload": "Shift+添付ファイルボタンでダウンロード、または",
   "detAttDelToRemove": "Deleteで削除",
   "detEmpty": "あなたのパスワードがここに表示されます",
@@ -254,6 +257,8 @@
   "detDelFromTrash": "ゴミ箱から削除しますか？",
   "detDelFromTrashBody": "元に戻すことはできなくなります。",
   "detDelFromTrashBodyHint": "ごみ箱の中味をすばやく除去するには、ごみ箱メニューの空アイコンをクリックします。",
+  "detDelToTrash": "エントリーを削除しますか？",
+  "detDelToTrashBody": "この項目はごみ箱フォルダに移動されます。",
   "detFieldCopied": "コピーしました",
   "detFieldCopiedTime": "{}秒間コピー",
   "detCopyHint": "フィールドの題名をクリックすることで値をコピーできます",
@@ -267,6 +272,7 @@
   "detMenuCopyUser": "ユーザーをコピーする",
   "detSetupOtp": "ワンタイムパスワード",
   "detClone": "コピーを作成する",
+  "detCopyEntryToClipboard": "すべてのフィールドをコピーします",
   "detClonedName": "コピー",
   "detAutoType": "自動入力",
   "detAutoTypeSettings": "自動入力の設定",
@@ -296,6 +302,8 @@
   "detOtpQrWrongBody": "QRコードの読み取りは成功しましたが、ワンタイムパスワードが含まれていませんでした。",
   "detLockField": "このフィールドをロックすると、内容が検索の対象外となり表示もされません。内容を表示するには明示的にクリックすることが必要となります。",
   "detUnlockField": "このフィールドをアンロックすると、直ちに内容が検索の対象となり表示もされます。",
+  "detHideField": "隠す",
+  "detAutoTypeField": "自動入力",
   "autoTypeEntryFields": "入力フィールド",
   "autoTypeModifiers": "修飾キー",
   "autoTypeKeys": "キー",
@@ -311,6 +319,8 @@
   "autoTypeSelectionHint": "自動入力シーケンスを入力",
   "autoTypeSelectionHintAction": "パスワードのみ入力",
   "autoTypeSelectionHintOpt": "ユーザーのみ入力",
+  "autoTypeSelectionHintShift": "その他のフィールド",
+  "autoTypeSelectionOtp": "ワンタイムパスワード",
   "appSecWarn": "安全ではありません!",
   "appSecWarnBody1": "安全でない接続でアプリをロードしました。誰かが監視してパスワードを盗むかもしれません。あなたが何をしているのかを明確に理解しているのでなければ、操作を中止することを強く推奨します。",
   "appSecWarnBody2": "あなたのデータベースは暗号化されています。しかし、あなたのアプリが変更されていないことを誰も保証することはできません。",
@@ -365,6 +375,7 @@
   "setGenThemeHc": "ハイコントラスト",
   "setGenThemeSd": "Solarized ダーク",
   "setGenThemeSl": "Solarized ライト",
+  "setGenThemeMacDark": "macOS Dark",
   "setGenLocale": "言語",
   "setGenLocOther": "他の言語はプラグインで利用可能です",
   "setGenFontSize": "フォントサイズ",
@@ -378,6 +389,7 @@
   "setGenShowSubgroups": "すべてのサブグループからエントリーを表示する",
   "setGenTableView": "エントリーをテーブル表示する",
   "setGenColorfulIcons": "リスト中で色付きのカスタムアイコンを使用する",
+  "setGenDirectAutotype": "一致するエントリが1つだけ見つかった場合は、Autotypeでそのエントリを自動的に選択します",
   "setGenFunction": "機能",
   "setGenAutoSyncOnClose": "閉じるときに自動で保存と同期を行う",
   "setGenAutoSyncTimer": "周期的に自動保存と同期を行う",
@@ -410,6 +422,7 @@
   "setGenTryBetaWarning": "未保存のファイル",
   "setGenTryBetaWarningBody": "すべてのファイルを保存してもう一度このボタンをクリックしてください",
   "setGenShowAppLogs": "アプリのログを表示する",
+  "setGenReloadApp": "アプリを更新する",
   "setFilePath": "ファイルパス",
   "setFileStorage": "{}からファイルをロードしました。",
   "setFileIntl": "このファイルはアプリ内部のストレージに格納されています",
@@ -473,6 +486,7 @@
   "setFileUnsavedBody": "このファイルには未保存の変更があります",
   "setFileCloseNoSave": "変更を破棄して閉じる",
   "setFileDontClose": "閉じない",
+  "setFileFormatVersion": "ファイルフォーマット",
   "setShTitle": "ショートカット",
   "setShShowAll": "すべての項目を表示する",
   "setShColors": "色付きの項目を表示する",
@@ -495,6 +509,7 @@
   "setShCopyUrlGlobal": "ウェブサイトをコピーする (アプリがバックグランドで動作しているとき)",
   "setShAutoTypeGlobal": "自動入力を実行する (アプリがバックグランドで動作しているとき)",
   "setShLock": "データベースをロックする",
+  "setShEdit": "新しいキーの組み合わせを押して、ショートカットとして設定します",
   "setPlInstallTitle": "新しいプラグインのインストール",
   "setPlInstallDesc": "KeeWebプラグインは、KeeWebに機能、テーマ、言語を追加します。プラグインはKeeWebと同じ特権で動作するので、すべてのパスワードにアクセスしたり管理することができます。信頼できないプラグインは絶対にインストールしないでください。",
   "setPlInstallLabel": "プラグインのURL",
@@ -563,5 +578,12 @@
   "launcherSave": "パスワードデータベースを保存",
   "launcherFileFilter": "KeePassファイル",
   "authPopupRequired": "ポップアップはブロックされました",
-  "authPopupRequiredBody": "ブラウザの設定でポップアップを許可してから再度お試しください。"
+  "authPopupRequiredBody": "ブラウザの設定でポップアップを許可してから再度お試しください。",
+  "exportFileInfo": "ファイル情報",
+  "exportHtmlName": "名前",
+  "exportDescription": "このファイルは{}で生成されます",
+  "importCsvTitle": "CSVをインポート",
+  "importCsvRun": "インポート",
+  "importTo": "エントリーは既にインポートされています",
+  "importNewFile": "ファイルを新規作成する"
 }
