--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -1,13 +1,4 @@
 {
-  "detDelToTrash": "Item verwijderen?",
-  "detDelToTrashBody": "Het item wordt naar de prullenbak verplaatst.",
-  "setGenThemeMacDark": "macOS Donker",
-  "setFileSaveToHtml": "HTML",
-  "exportFileInfo": "Bestandsinformatie",
-  "exportHtmlName": "Naam",
-  "exportHtmlDate": "Exportdatum",
-  "exportGenerator": "Software",
-  "exportDescription": "Dit bestand ie gegenereerd met {}.",
   "months": [
     "januari",
     "februari",
@@ -54,7 +45,7 @@
     "vr",
     "za"
   ],
-  "retToApp": "terug naar de app",
+  "retToApp": "terug naar app",
   "name": "naam",
   "icon": "icoon",
   "title": "titel",
@@ -89,7 +80,7 @@
   "menuSetGeneral": "Algemeen",
   "menuSetAbout": "Over",
   "menuAlertNoTags": "Geen labels",
-  "menuAlertNoTagsBody": "Voeg nieuwe labels toe tijdens het bewerken van velden in de sectie Labels.",
+  "menuAlertNoTagsBody": "Nieuwe labels kunnen worden toegevoegd tijdens het bewerken van velden in de sectie Labels.",
   "menuEmptyTrash": "Prullenbak leegmaken",
   "menuEmptyTrashAlert": "Prullenbak leegmaken?",
   "menuEmptyTrashAlertBody": "Het zal niet mogelijk zijn om items terug te zetten",
@@ -118,6 +109,8 @@
   "genPresetMac": "MAC-adres",
   "genPresetHash128": "128-bit hash",
   "genPresetHash256": "256-bit hash",
+  "genHidePass": "Wachtwoord verbergen",
+  "genShowPass": "Wachtwoord weergeven",
   "grpTitle": "Groep",
   "grpSearch": "Zoeken naar items in deze groep aanzetten",
   "grpAutoType": "Auto-type aanzetten",
@@ -137,7 +130,7 @@
   "genPsCreate": "Opslaan",
   "genPsDelete": "Verwijderen",
   "genPsNew": "Instelling",
-  "genPsEnabled": "Toon in instellingenlijst",
+  "genPsEnabled": "Weergeven in instellingenlijst",
   "genPsDefault": "Standaard geselecteerd",
   "genPsDefaultLength": "Standaardlengte",
   "genPsUpper": "Hoofdletters Latijns schrift",
@@ -156,7 +149,7 @@
   "keyChangeRepeatPassword": "Wachtwoord, nogmaals",
   "keyEnter": "Enter",
   "iconFavTitle": "Download en gebruik website favicon",
-  "iconSelCustom": "Selecteer eigen icoon",
+  "iconSelCustom": "Selecteer een eigen icoon",
   "listEmptyTitle": "Leeg",
   "listEmptyAdd": "toevoegen met de {} knop bovenin",
   "listGroup": "Groep",
@@ -183,6 +176,7 @@
   "searchOptions": "Opties",
   "searchCase": "Hoofdlettergevoelig",
   "searchRegex": "RegEx",
+  "searchRank": "Automatisch",
   "openOpen": "Openen",
   "openNew": "Nieuw",
   "openMore": "Meer",
@@ -223,8 +217,9 @@
   "openErrorDescription": "Er is een fout opgetreden bij het openen van dit bestand",
   "openErrorFileNotFound": "Bestand niet gevonden",
   "openListErrorBody": "Fout bij het laden van de bestandenlijst",
-  "openShowAllFiles": "Alle bestanden tonen",
-  "detAttDownload": "Shift-klik bijlage-knop om te downloaden of",
+  "openShowAllFiles": "Alle bestanden weergeven",
+  "openFileNoCacheError": "Bestand niet gevonden in de cache-opslag. Dit kan gebeuren omdat de browseropslag is opgeschoond. Om het bestand te openen, verwijdert u het uit KeeWeb en voegt u het opnieuw toe.",
+  "detAttDownload": "Shift-klik de bijlage-knop om deze te downloaden of",
   "detAttDelToRemove": "Verwijderen om te wissen",
   "detEmpty": "Je wachtwoorden worden hier weergegeven",
   "detGroupRestore": "Om deze groep te herstellen sleep je het naar een willekeurige groep buiten de prullenbak",
@@ -245,7 +240,7 @@
   "detHistoryRevertAlertBody": "De huidige status wordt opgeslagen.",
   "detHistoryDeleteAlert": "Deze opgeslagen status verwijderen?",
   "detHistoryDeleteAlertBody": "Je kunt dit niet meer herstellen!",
-  "detHistoryDiscardChangesAlert": "Wijzigingen in dit item ongedaan maken?",
+  "detHistoryDiscardChangesAlert": "Wijzigingen in de invoer annuleren?",
   "detHistoryDiscardChangesAlertBody": "Niet-opgeslagen wijzigingen gaan verloren, er is geen weg terug.",
   "detBackToList": "terug naar lijst",
   "detSetIconColor": "Kleur wijzigen",
@@ -263,6 +258,8 @@
   "detDelFromTrash": "Uit prullenbak verwijderen?",
   "detDelFromTrashBody": "Je kunt dit niet meer terugzetten.",
   "detDelFromTrashBodyHint": "Klik in het Prullenbak-menu op het icoon Leegmaken om de prullenbak snel te legen.",
+  "detDelToTrash": "Item verwijderen?",
+  "detDelToTrashBody": "Het item wordt naar de prullenbak verplaatst.",
   "detFieldCopied": "Gekopiëerd",
   "detFieldCopiedTime": "Gekopiëerd voor {} seconden",
   "detCopyHint": "Klik op de titel van een veld om de waarde te kopiëren",
@@ -276,6 +273,7 @@
   "detMenuCopyUser": "Kopiëer gebruiker",
   "detSetupOtp": "Eenmalige wachtwoorden",
   "detClone": "Dupliceren",
+  "detCopyEntryToClipboard": "Kopieer alle velden",
   "detClonedName": "Kopiëren",
   "detAutoType": "Auto-type",
   "detAutoTypeSettings": "Auto-type instellingen",
@@ -305,6 +303,9 @@
   "detOtpQrWrongBody": "De QR-code was succesvol gescand, maar het bevat niet de data van een eenmalig wachtwoord.",
   "detLockField": "Vergrendel dit veld opdat de inhoud niet doorzoekbaar en zichtbaar is. Als u de inhoud wilt weergeven, moet u er expliciet op klikken.",
   "detUnlockField": "Ontgrendel dit veld zodat de inhoud direct doorzoekbaar en zichtbaar wordt.",
+  "detRevealField": "Weergeven",
+  "detHideField": "Verbergen",
+  "detAutoTypeField": "Auto-type",
   "autoTypeEntryFields": "Itemvelden",
   "autoTypeModifiers": "Speciale toetsen",
   "autoTypeKeys": "Toetsen",
@@ -320,6 +321,8 @@
   "autoTypeSelectionHint": "Voer de Auto-typereeks in",
   "autoTypeSelectionHintAction": "Voer alleen het wachtwoord in",
   "autoTypeSelectionHintOpt": "Voer alleen gebruikersnaam in",
+  "autoTypeSelectionHintShift": "Andere velden",
+  "autoTypeSelectionOtp": "Eenmalig wachtwoord",
   "appSecWarn": "Onveilig!",
   "appSecWarnBody1": "Je hebt de app geladen met een onveilige verbinding. Iemand kan mogelijk nu meekijken en je wachtwoorden stelen. Wij adviseren je te stoppen tenzij je je bewust bent van de mogelijke consequenties.",
   "appSecWarnBody2": "Ja, je database is versleuteld, maar dit is geen garantie dat de app niet gewijzigd is onderweg naar jou toe.",
@@ -374,6 +377,7 @@
   "setGenThemeHc": "Hoog contrast",
   "setGenThemeSd": "Overbelicht donker",
   "setGenThemeSl": "Overbelicht licht",
+  "setGenThemeMacDark": "macOS Donker",
   "setGenLocale": "Taal",
   "setGenLocOther": "overige talen zijn beschikbaar als plug-in",
   "setGenFontSize": "Lettergrootte",
@@ -386,7 +390,8 @@
   "setGenTitlebarStyleHiddenInset": "Aangepaste titel, verplaatsbaar venster",
   "setGenShowSubgroups": "Items weergeven van alle subgroepen",
   "setGenTableView": "Itemlijst tabelweergave",
-  "setGenColorfulIcons": "Kleurrijke eigen iconen in lijst",
+  "setGenColorfulIcons": "Kleurrijke eigen iconen in de lijst",
+  "setGenDirectAutotype": "Als er slechts één overeenkomstig item wordt gevonden, gebruik dat dan om automatisch in te vullen",
   "setGenFunction": "Functie",
   "setGenAutoSyncOnClose": "Bij afsluiten automatisch opslaan en synchroniseren",
   "setGenAutoSyncTimer": "Periodiek automatisch opslaan en synchroniseren",
@@ -419,6 +424,7 @@
   "setGenTryBetaWarning": "Niet-opgeslagen bestanden",
   "setGenTryBetaWarningBody": "Sla alle bestanden op en klik opnieuw op deze knop",
   "setGenShowAppLogs": "App-logs weergeven",
+  "setGenReloadApp": "App opnieuw laden",
   "setFilePath": "Bestandspad",
   "setFileStorage": "Dit bestand is geladen van {}.",
   "setFileIntl": "Dit bestand is opgeslagen in de interne app-storage.",
@@ -430,6 +436,7 @@
   "setFileSync": "Sync",
   "setFileSyncVerb": "Sync",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Laatste sync",
   "setFileLastSyncUnknown": "onbekend",
   "setFileSyncInProgress": "Synchroniseren...",
@@ -468,9 +475,9 @@
   "setFileKdfParamsPar": "Parallelisme",
   "setFileKeyChangeForce": "Vraag om de sleutel aan te passen na (dagen)",
   "setFileUseKeyFile": "Gebruik sleutelbestand",
-  "setFileUseGenKeyFile": "Gebruik aangemaakt sleutelbestand",
-  "setFileUseOldKeyFile": "Gebruik oude sleutelbestand",
-  "setFileGenKeyFile": "Nieuw sleutelbestand genereren",
+  "setFileUseGenKeyFile": "Gebruik het aangemaakte sleutelbestand",
+  "setFileUseOldKeyFile": "Gebruik het oude sleutelbestand",
+  "setFileGenKeyFile": "Genereer een nieuw sleutelbestand",
   "setFileDontUseKeyFile": "Gebruik geen sleutelbestand",
   "setFileEmptyPass": "Leeg wachtwoord",
   "setFileEmptyPassBody": "Bij het opslaan van de database zonder wachtwoord blijft alles onbeschermd. Wil je echt doorgaan?",
@@ -482,6 +489,7 @@
   "setFileUnsavedBody": "Er zijn niet opgeslagen wijzigingen in dit bestand",
   "setFileCloseNoSave": "Sluiten en wijzigingen ongedaan maken",
   "setFileDontClose": "Niet sluiten",
+  "setFileFormatVersion": "Bestandsformaat",
   "setShTitle": "Sneltoetsen",
   "setShShowAll": "Toon alle items",
   "setShColors": "Toon items met kleuren",
@@ -499,11 +507,12 @@
   "setShSave": "bewaar alle bestanden",
   "setShGen": "wachtwoord genereren",
   "setShSet": "app-instellingen",
-  "setShCopyPassGlobal": "kopieer wachtwoord (met app op achtergrond)",
-  "setShCopyUserGlobal": "kopieer gebruikersnaam (met app op achtergrond)",
-  "setShCopyUrlGlobal": "kopieer website (met app op achtergrond)",
-  "setShAutoTypeGlobal": "auto-type (met app op achtergrond)",
+  "setShCopyPassGlobal": "kopieer wachtwoord (met de app in de achtergrond)",
+  "setShCopyUserGlobal": "kopieer gebruikersnaam (met de app in de achtergrond)",
+  "setShCopyUrlGlobal": "kopieer website (met de app in de achtergrond)",
+  "setShAutoTypeGlobal": "auto-type (met de app in de achtergrond)",
   "setShLock": "database blokkeren",
+  "setShEdit": "Druk een nieuwe toetscombinatie om deze in te stellen als sneltoets",
   "setPlInstallTitle": "Nieuwe plug-ins installeren",
   "setPlInstallDesc": "KeeWeb plug-ins voegen functies, thema's en vertalingen toe aan KeeWeb. Plug-ins functioneren met dezelfde privileges als KeeWeb; zij krijgen toegang tot al je wachtwoorden en kunnen deze beheren. Installeer nooit plug-ins die je niet vertrouwt.",
   "setPlInstallLabel": "Plug-in URL",
@@ -572,5 +581,15 @@
   "launcherSave": "Bewaar Passwords Database",
   "launcherFileFilter": "KeePass-bestanden",
   "authPopupRequired": "Pop-ups zijn geblokkeerd",
-  "authPopupRequiredBody": "Sta pop-ups toe voor deze app in de browser of probeer het nog eens."
+  "authPopupRequiredBody": "Sta pop-ups toe voor deze app in de browser of probeer het nog eens.",
+  "exportFileInfo": "Bestandsinformatie",
+  "exportHtmlName": "Naam",
+  "exportHtmlDate": "Exportdatum",
+  "exportGenerator": "Software",
+  "exportDescription": "Dit bestand ie gegenereerd met {}.",
+  "importCsvTitle": "Importeren van CSV",
+  "importCsvRun": "Importeren",
+  "importIgnoreField": "Negeren",
+  "importTo": "Items worden geïmporteerd naar",
+  "importNewFile": "Nieuw bestand"
 }
