--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -1,13 +1,4 @@
 {
-  "detDelToTrash": "Usunąć wpis?",
-  "detDelToTrashBody": "Wpis zostanie przeniesiony do folderu kosza.",
-  "setGenThemeMacDark": "MacOS Ciemny",
-  "setFileSaveToHtml": "HTML",
-  "exportFileInfo": "Informacje o pliku",
-  "exportHtmlName": "Nazwa",
-  "exportHtmlDate": "Data eksportu",
-  "exportGenerator": "Oprogramowanie",
-  "exportDescription": "Ten plik jest generowany za pomocą {}.",
   "months": [
     "styczeń",
     "luty",
@@ -267,6 +258,8 @@
   "detDelFromTrash": "Usunąć z kosza?",
   "detDelFromTrashBody": "Nie będziesz mógł tego przywrócić.",
   "detDelFromTrashBodyHint": "Aby szybko usunąć wszystkie elementy z kosza, kliknij ikonę usuwania z menu kosza.",
+  "detDelToTrash": "Usunąć wpis?",
+  "detDelToTrashBody": "Wpis zostanie przeniesiony do folderu kosza.",
   "detFieldCopied": "Skopiowano",
   "detFieldCopiedTime": "Skopiowano w {} sekund",
   "detCopyHint": "Możesz skopiować wartość pola poprzez kliknięcie jego tytułu",
@@ -280,6 +273,7 @@
   "detMenuCopyUser": "Skopiuj użytkownika",
   "detSetupOtp": "Hasła jednorazowe",
   "detClone": "Stwórz kopię",
+  "detCopyEntryToClipboard": "Skopiuj wszystkie pola",
   "detClonedName": "Kopia",
   "detAutoType": "Auto-type",
   "detAutoTypeSettings": "Ustawienia auto-type",
@@ -309,13 +303,16 @@
   "detOtpQrWrongBody": "Twój kod QR został pomyślnie przeskanowany, ale nie zawiera danych hasła jednorazowego.",
   "detLockField": "Zablokuj to pole, więc jego zawartość nie będzie widoczna i dostępna do wyszukiwania. Wyświetlanie treści wymaga jawnego kliknięcia.",
   "detUnlockField": "Odblokuj to pole, dzięki czemu jego treść będzie natychmiast widoczna i dostępna do wyszukiwania",
+  "detRevealField": "Ujawnij",
+  "detHideField": "Ukryj",
+  "detAutoTypeField": "Auto. wpisz",
   "autoTypeEntryFields": "Pola wpisu",
   "autoTypeModifiers": "Klawisze modyfikujące",
   "autoTypeKeys": "Klawisze",
   "autoTypeLink": "Więcej...",
   "autoTypeError": "Błąd auto-type",
   "autoTypeErrorGeneric": "Wystąpił błąd podczas wykonywania auto-type: {}",
-  "autoTypeErrorGlobal": "Aby użyć skrótu ogólnosystemowego, należy aktywować aplikację, w której chcesz wpisać twoje hasło",
+  "autoTypeErrorGlobal": "Aby użyć skrótu systemowego, uaktywnij aplikację, w której chcesz wpisać hasło",
   "autoTypeErrorNotInstalled": "{} nie jest zainstalowany",
   "autoTypeHeader": "Auto-type: wybierz",
   "autoTypeMsgNoWindow": "Nie mogliśmy uzyskać tytułu aktywnego okna. Zacznij pisać, aby wyszukać",
@@ -324,6 +321,8 @@
   "autoTypeSelectionHint": "Wpisz sekwencję auto-type",
   "autoTypeSelectionHintAction": "Wpisz tylko hasło",
   "autoTypeSelectionHintOpt": "Wpisz tylko nazwę użytkownika",
+  "autoTypeSelectionHintShift": "Inne pola",
+  "autoTypeSelectionOtp": "Hasło jednorazowe",
   "appSecWarn": "Niezabezpieczone!",
   "appSecWarnBody1": "Aplikację załadowano z niezabezpieczonym połączeniem. Ktoś może cię obserwować i ukraść twoje hasła. Zdecydowanie zalecamy przerwanie pracy, chyba że wyraźnie zrozumiesz, co robisz.",
   "appSecWarnBody2": "Tak, twoja baza danych jest zaszyfrowana, ale nikt nie może zagwarantować, że aplikacja nie została zmodyfikowana w drodze do ciebie.",
@@ -378,6 +377,7 @@
   "setGenThemeHc": "Wysoki kontrast",
   "setGenThemeSd": "Solaryzowany ciemny",
   "setGenThemeSl": "Solaryzowany jasny",
+  "setGenThemeMacDark": "MacOS Ciemny",
   "setGenLocale": "Język",
   "setGenLocOther": "inne języki są dostępne jako wtyczki",
   "setGenFontSize": "Rozmiar fontu",
@@ -436,6 +436,7 @@
   "setFileSync": "Synchronizacja",
   "setFileSyncVerb": "Synch.",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Ostatnia synchronizacja",
   "setFileLastSyncUnknown": "nieznana",
   "setFileSyncInProgress": "synchronizacja w toku",
@@ -488,6 +489,7 @@
   "setFileUnsavedBody": "Istnieją niezapisane zmiany w tym pliku",
   "setFileCloseNoSave": "Zamknij i utrać zmiany",
   "setFileDontClose": "Nie zamykaj",
+  "setFileFormatVersion": "Format pliku",
   "setShTitle": "Skróty",
   "setShShowAll": "Pokaż wszystkie elementy",
   "setShColors": "Pokaż elementy z kolorami",
@@ -510,6 +512,7 @@
   "setShCopyUrlGlobal": "Skopiuj stronę WWW (gdy ta aplikacja jest w tle)",
   "setShAutoTypeGlobal": "Auto-type (gdy ta aplikacja jest w tle)",
   "setShLock": "Zablokuj bazę danych",
+  "setShEdit": "Naciśnij nową kombinację klawiszy, aby ustawić ją jako skrót",
   "setPlInstallTitle": "Zainstaluj nowe wtyczki",
   "setPlInstallDesc": "Wtyczki KeeWeb dodają funkcje, motywy oraz języki do KeeWeb. Wtyczki działają z tymi samymi uprawnieniami co KeeWeb, mogą uzyskiwać dostęp do wszystkich twoich haseł i zarządzać nimi. Nigdy nie instaluj wtyczek, do których nie masz zaufania.",
   "setPlInstallLabel": "URL wtyczki",
@@ -578,5 +581,15 @@
   "launcherSave": "Zapisz bazę danych haseł",
   "launcherFileFilter": "Pliki KeePass",
   "authPopupRequired": "Okna pop-up są zablokowane",
-  "authPopupRequiredBody": "Proszę zezwolić przeglądarce na wyskakujące okna dla tej aplikacji."
+  "authPopupRequiredBody": "Proszę zezwolić przeglądarce na wyskakujące okna dla tej aplikacji.",
+  "exportFileInfo": "Informacje o pliku",
+  "exportHtmlName": "Nazwa",
+  "exportHtmlDate": "Data eksportu",
+  "exportGenerator": "Oprogramowanie",
+  "exportDescription": "Ten plik jest generowany za pomocą {}.",
+  "importCsvTitle": "Importuj z CSV",
+  "importCsvRun": "Importuj",
+  "importIgnoreField": "Ignoruj",
+  "importTo": "Wpisy zostaną zaimportowane do",
+  "importNewFile": "Nowy plik"
 }
