--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -258,6 +258,8 @@
   "detDelFromTrash": "Удалить из корзины?",
   "detDelFromTrashBody": "Вы не сможете отменить эту операцию.",
   "detDelFromTrashBodyHint": "Для быстрого удаления всех элементов из корзины, щелкните значок очистки в меню корзины.",
+  "detDelToTrash": "Удалить запись?",
+  "detDelToTrashBody": "Запись будет перемещена в корзину.",
   "detFieldCopied": "скопирован",
   "detFieldCopiedTime": "Скопировано на {} секунд",
   "detCopyHint": "Вы можете скопировать значение поля, нажав на его заголовок",
@@ -271,6 +273,7 @@
   "detMenuCopyUser": "Копировать логин",
   "detSetupOtp": "Одноразовый пароль",
   "detClone": "Сделать копию",
+  "detCopyEntryToClipboard": "Скопировать все поля",
   "detClonedName": "Копировать",
   "detAutoType": "Автозаполнение",
   "detAutoTypeSettings": "Настройки автозаполнения",
@@ -315,6 +318,8 @@
   "autoTypeSelectionHint": "Введите последовательность автозаполнения",
   "autoTypeSelectionHintAction": "Только введите пароль",
   "autoTypeSelectionHintOpt": "Только введите имя пользователя",
+  "autoTypeSelectionHintShift": "Другие поля",
+  "autoTypeSelectionOtp": "Одноразовый пароль",
   "appSecWarn": "Не безопасно!",
   "appSecWarnBody1": "Вы загрузили это приложение через незащищенное соединение. Кто-то может наблюдать за вами и украсть ваши пароли. Мы настоятельно рекомендуем вам остановиться, если вы четко не понимаете, что делаете.",
   "appSecWarnBody2": "Да, база данных зашифрована, но никто не может гарантировать, что приложение не было изменено в пути к вам.",
@@ -369,6 +374,7 @@
   "setGenThemeHc": "Высокая контрастность",
   "setGenThemeSd": "Выцветшая темная",
   "setGenThemeSl": "Выцветшая светлая",
+  "setGenThemeMacDark": "Тёмная тема macOS",
   "setGenLocale": "Язык",
   "setGenLocOther": "другие языки доступны в качестве подключаемых модулей",
   "setGenFontSize": "Размер шрифта",
@@ -427,6 +433,7 @@
   "setFileSync": "Синхронизация",
   "setFileSyncVerb": "Синхронизировать",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Последняя синхронизация",
   "setFileLastSyncUnknown": "неизвестно",
   "setFileSyncInProgress": "синхронизация выполняется",
@@ -479,6 +486,7 @@
   "setFileUnsavedBody": "В этом файле есть несохраненные изменения",
   "setFileCloseNoSave": "Закрыть и потерять изменения",
   "setFileDontClose": "Не закрывать",
+  "setFileFormatVersion": "Формат файла",
   "setShTitle": "Горячие клавиши",
   "setShShowAll": "показать все элементы",
   "setShColors": "показать элементы этого цвета",
@@ -501,6 +509,7 @@
   "setShCopyUrlGlobal": "копировать сайт (когда приложение работает в фоновом режиме)",
   "setShAutoTypeGlobal": "автозаполнение (когда приложение работает в фоновом режиме)",
   "setShLock": "заблокировать базу данных",
+  "setShEdit": "Нажмите новую комбинацию клавиш",
   "setPlInstallTitle": "Установить новые плагины",
   "setPlInstallDesc": "Плагины для KeeWeb добавляют новые функции, темы и языки. Плагины работают с теми же привилегиями, что и KeeWeb, они могут получить доступ ко всем вашим паролям и управлять ими. Никогда не устанавливайте плагины, которым вы не доверяете.",
   "setPlInstallLabel": "URL-адрес плагина",
@@ -569,5 +578,15 @@
   "launcherSave": "Сохранение паролей базы данных",
   "launcherFileFilter": "Файлы KeePass",
   "authPopupRequired": "Всплывающие окна заблокированы",
-  "authPopupRequiredBody": "Разрешите всплывающие окна в вашем браузере или попробуйте снова."
+  "authPopupRequiredBody": "Разрешите всплывающие окна в вашем браузере или попробуйте снова.",
+  "exportFileInfo": "Информация о файле",
+  "exportHtmlName": "Имя",
+  "exportHtmlDate": "Дата экспорта",
+  "exportGenerator": "Программное обеспечение",
+  "exportDescription": "Этот файл генерируется с помощью {}.",
+  "importCsvTitle": "Импорт из CSV",
+  "importCsvRun": "Импорт",
+  "importIgnoreField": "игнорировать",
+  "importTo": "Записи будут импортированы в",
+  "importNewFile": "Новый файл"
 }
