--- a/docs/translations/sv-SE/sv-SE.json
+++ b/docs/translations/sv-SE/sv-SE.json
@@ -106,6 +106,7 @@
   "genPresetMac": "MAC adress",
   "genPresetHash128": "128-bit hash",
   "genPresetHash256": "256-bit hash",
+  "genShowPass": "Visa lösenordet",
   "grpTitle": "Grupp",
   "grpSearch": "Gör det möjligt att söka poster i denna grupp",
   "grpAutoType": "Aktivera auto-ifyllning",
@@ -142,6 +143,7 @@
   "keyChangeTitleExpired": "Huvudnyckel utgången",
   "keyChangeMessageExpired": "Huvudnyckel för denna databas har gått ut. Var god och ange en ny nyckel",
   "keyChangeRepeatPassword": "Lösenord, en gång till",
+  "keyEnter": "Enter",
   "iconFavTitle": "Ladda ner och använd webbsidans favicon",
   "iconSelCustom": "Använd anpassad ikon",
   "listEmptyTitle": "Tom",
@@ -206,6 +208,7 @@
   "openError": "Fel",
   "openErrorDescription": "Ett fel uppstod när filen öppnades",
   "openErrorFileNotFound": "Ingen fil hittades",
+  "openShowAllFiles": "Visa alla filar",
   "detAttDownload": "Shift-klicka bifogat-knappen för att ladda ned, eller",
   "detAttDelToRemove": "Delete för att ta bort",
   "detEmpty": "Dina lösenord kommer visas här",
@@ -290,6 +293,8 @@
   "autoTypeMsgNoWindow": "Vi lyckades inte erhålla aktiv fönstertitel, börja skriva för att söka",
   "autoTypeMsgMatchedByWindow": "Välj ett lösenord för {}",
   "autoTypeNoMatches": "inga träffar",
+  "autoTypeSelectionHintShift": "Andra fälter",
+  "autoTypeSelectionOtp": "Engångslösenord",
   "appSecWarn": "Inte säker!",
   "appSecWarnBody1": "Du har laddat denna app över en osäker anslutning. Någon kan spionera på dig och stjäla dina lösenord. Vi rekommenderar dig start att sluta, om du inte förstår fullt ut vad du gör.",
   "appSecWarnBody2": "Ja, din databas är krypterad men ingen kan garantera att appen ej blivit modifierad påvägen till dig.",
@@ -345,6 +350,7 @@
   "setGenFontSizeNormal": "Normal",
   "setGenFontSizeLarge": "Stor",
   "setGenFontSizeLargest": "Störst",
+  "setGenTitlebarStyleDefault": "Standard",
   "setGenShowSubgroups": "Visa poster från alla subgrupper",
   "setGenTableView": "Inläggslista i tabellvy",
   "setGenColorfulIcons": "Färgrika specialikoner i lista",
@@ -382,6 +388,7 @@
   "setFileSaveTo": "Spara till ...",
   "setFileClose": "Stäng",
   "setFileSync": "Synk",
+  "setFileSyncVerb": "Synk",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Senaste synk",
   "setFileLastSyncUnknown": "okänd",
@@ -452,6 +459,10 @@
   "setShCopyUrlGlobal": "Kopiera webbsidan (när appen är i bakgrunden)",
   "setShAutoTypeGlobal": "Auto-type (när appen är i bakgrunden)",
   "setShLock": "lås databas",
+  "setPlInstallBtn": "Installera",
+  "setPlUpdateBtn": "Uppdater",
+  "setPlJs": "kod",
+  "setPlLoc": "språk",
   "setAboutTitle": "Om",
   "setAboutBuilt": "Denna appen är byggd med dessa grymt bra verktyg",
   "setAboutLic": "Licens",
@@ -486,5 +497,8 @@
   "launcherSave": "Spara lösenordsdatabasen",
   "launcherFileFilter": "KeePass filer",
   "authPopupRequired": "Pop-ups är blockerade",
-  "authPopupRequiredBody": "Vänligen tillåt pop-ups för denna app i din webbläsare."
+  "authPopupRequiredBody": "Vänligen tillåt pop-ups för denna app i din webbläsare.",
+  "exportHtmlName": "Namn",
+  "exportGenerator": "Mjukvara",
+  "importIgnoreField": "Ignorera"
 }
