--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -1,13 +1,4 @@
 {
-  "detDelToTrash": "Giriş silinsin mi?",
-  "detDelToTrashBody": "Giriş çöp klasörüne taşınır.",
-  "setGenThemeMacDark": "macOS Koyu",
-  "setFileSaveToHtml": "HTML",
-  "exportFileInfo": "Dosya bilgisi",
-  "exportHtmlName": "İsim",
-  "exportHtmlDate": "Aktarma tarihi",
-  "exportGenerator": "Yazılım",
-  "exportDescription": "Bu dosya {} ile oluşturulmuştur.",
   "months": [
     "Ocak",
     "Şubat",
@@ -66,7 +57,7 @@
   "entry": "Girdi",
   "group": "Grup",
   "noTitle": "Başlık yok",
-  "or": "yada",
+  "or": "ya da",
   "history": "Geçmiş",
   "template": "Şablon",
   "notImplemented": "Uygulanmadı",
@@ -128,7 +119,7 @@
   "grpTrash": "Kümeyi tüm girdileriyle birlikte sil",
   "tagTitle": "Etiket",
   "tagTrash": "Etiketi tüm girdilerden kaldır",
-  "tagRename": "Adlandır",
+  "tagRename": "Yeniden Adlandır",
   "tagTrashQuestion": "Etiket tüm girdilerden kaldırılsın mı?",
   "tagTrashQuestionBody": "Bu etiket tüm girdilerden kaldırılacak. Etiketi geri koymanın kolay bir yolu olmayacak.",
   "tagExists": "Etiket zaten mevcut",
@@ -267,6 +258,8 @@
   "detDelFromTrash": "Çöpten silinsin mi?",
   "detDelFromTrashBody": "Bunu geri getiremeyeceksin.",
   "detDelFromTrashBodyHint": "Çöpteki tüm öğeleri hızlıca kaldırmak için Çöp menüsündeki boşaltma simgesini tıklayın.",
+  "detDelToTrash": "Giriş silinsin mi?",
+  "detDelToTrashBody": "Giriş çöp klasörüne taşınır.",
   "detFieldCopied": "Kopyalandı",
   "detFieldCopiedTime": "{} saniyede kopyalandı",
   "detCopyHint": "Alan değerini alan başlığına tıklayarak kopyalabilirsiniz",
@@ -280,6 +273,7 @@
   "detMenuCopyUser": "Kullanıcı adını kopyala",
   "detSetupOtp": "Tek kullanımlık parolalar",
   "detClone": "Kopyasını oluştur",
+  "detCopyEntryToClipboard": "Tüm alanları kopyala",
   "detClonedName": "Kopyala",
   "detAutoType": "Otomatik yazım",
   "detAutoTypeSettings": "Otomatik yazım ayarları",
@@ -309,6 +303,9 @@
   "detOtpQrWrongBody": "Qr kodunuz başarıyla tarandı ama tek seferlik parola bilgisi içermiyor.",
   "detLockField": "Bu alanı kilitle, böylece içerik aranamaz ve görünmez. İçeriğin görüntülenmesi tıklamanız gerekir.",
   "detUnlockField": "Bu alanın kilidini açarak içeriğini hemen aranabilir ve görünür hale getirin",
+  "detRevealField": "Göster",
+  "detHideField": "Gizle",
+  "detAutoTypeField": "Otomatik yazım",
   "autoTypeEntryFields": "Girdi alanları",
   "autoTypeModifiers": "Tuşları değiştir",
   "autoTypeKeys": "Tuşlar",
@@ -324,6 +321,8 @@
   "autoTypeSelectionHint": "Otomatik yazım sırası",
   "autoTypeSelectionHintAction": "Sadece parolanızı yazın",
   "autoTypeSelectionHintOpt": "Sadece kullanıcı adınızı yazın",
+  "autoTypeSelectionHintShift": "Diğer alanlar",
+  "autoTypeSelectionOtp": "Tek kullanımlık parola",
   "appSecWarn": "Güvenli Değil!",
   "appSecWarnBody1": "Uygulamayı güvensiz bir bağlantıdan yüklediniz. Birileri sizi izliyor ve şifrenizi çalmaya çalışıyor olabilir. Tam olarak ne yapacağını anlamadıysanız, uygulamayı durdurmanızı önemle tavsiye ediyoruz.",
   "appSecWarnBody2": "Evet, veritabanı şifrelenmiş durumda, ancak hiç kimse size uygulamanın değiştirilmediğini garanti edemez.",
@@ -378,6 +377,7 @@
   "setGenThemeHc": "Yüksek kontrast",
   "setGenThemeSd": "Solarize koyu",
   "setGenThemeSl": "Solarize aydınlık",
+  "setGenThemeMacDark": "macOS Koyu",
   "setGenLocale": "Dil",
   "setGenLocOther": "Diğer diller eklenti olarak mevcuttur",
   "setGenFontSize": "Yazı tipi boyutu",
@@ -436,6 +436,7 @@
   "setFileSync": "Eşitle",
   "setFileSyncVerb": "Eşitle",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Son eşitleme",
   "setFileLastSyncUnknown": "bilinmeyen",
   "setFileSyncInProgress": "eşitleme devam ediyor",
@@ -488,6 +489,7 @@
   "setFileUnsavedBody": "Bu dosyada kaydedilmemiş değişiklikler var",
   "setFileCloseNoSave": "Kapat ve değişiklikleri kaydetme",
   "setFileDontClose": "Kapatma",
+  "setFileFormatVersion": "Dosya biçimi",
   "setShTitle": "Kısayollar",
   "setShShowAll": "tüm ögeleri göster",
   "setShColors": "tüm ögeleri renkli göster",
@@ -510,6 +512,7 @@
   "setShCopyUrlGlobal": "web sitesini kopyala (uygulama arka planda iken)",
   "setShAutoTypeGlobal": "otomatik yazım (uygulama arka planda iken)",
   "setShLock": "veritabanını kilitle",
+  "setShEdit": "Kısayol olarak ayarlamak için yeni bir tuş bileşimine basın",
   "setPlInstallTitle": "Yeni eklentiler yükle",
   "setPlInstallDesc": "KeeWeb eklentileri KeeWeb'e özellikler, temalar ve diller ekler. Eklentiler, KeeWeb ile aynı ayrıcalıklarla çalışır, tüm parolalara erişebilir ve yönetebilirler. Güvenmediğiniz eklentileri asla yüklemeyin.",
   "setPlInstallLabel": "Eklenti URL'si",
@@ -578,5 +581,15 @@
   "launcherSave": "Parola Veritabanını Kaydet",
   "launcherFileFilter": "KeePass dosyaları",
   "authPopupRequired": "Açılır pencereler engellendi",
-  "authPopupRequiredBody": "Lütfen tarayıcınızda açılır pencerelere izin verin veya tekrar deneyin."
+  "authPopupRequiredBody": "Lütfen tarayıcınızda açılır pencerelere izin verin veya tekrar deneyin.",
+  "exportFileInfo": "Dosya bilgisi",
+  "exportHtmlName": "İsim",
+  "exportHtmlDate": "Aktarma tarihi",
+  "exportGenerator": "Yazılım",
+  "exportDescription": "Bu dosya {} ile oluşturulmuştur.",
+  "importCsvTitle": "CSV’den içe aktar",
+  "importCsvRun": "İçeri Aktar",
+  "importIgnoreField": "Yoksay",
+  "importTo": "Girişler içe aktarılacaktır",
+  "importNewFile": "Yeni dosya"
 }
