--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -1,13 +1,4 @@
 {
-  "detDelToTrash": "Видалити запис?",
-  "detDelToTrashBody": "Запис буде перенесено у кошик.",
-  "setGenThemeMacDark": "macOS Dark",
-  "setFileSaveToHtml": "HTML",
-  "exportFileInfo": "Інформація про файл",
-  "exportHtmlName": "Ім'я",
-  "exportHtmlDate": "Дата експорту",
-  "exportGenerator": "Програмне забезпечення",
-  "exportDescription": "Цей файл згенеровано з {}.",
   "months": [
     "Січень ",
     "Лютий ",
@@ -122,9 +113,9 @@
   "genShowPass": "Показати пароль",
   "grpTitle": "Група ",
   "grpSearch": "Включити пошук записів в цій групі",
-  "grpAutoType": "Включити автозаповнення ",
-  "grpAutoTypeSeq": "Послідовність автозаповнення ",
-  "grpAutoTypeSeqDefault": "Використовувати за замовчуванням послідовне автосортування",
+  "grpAutoType": "Включити автовведення",
+  "grpAutoTypeSeq": "Послідовність автовведення",
+  "grpAutoTypeSeqDefault": "Використовувати послідовність автовведення за замовчуванням",
   "grpTrash": "Видалити групу з усіма елементами",
   "tagTitle": "Тег",
   "tagTrash": "Видалити тег з усіх записів",
@@ -156,6 +147,7 @@
   "keyChangeTitleExpired": "Термін дії майстер-ключа минув",
   "keyChangeMessageExpired": "Термін дії майстер-ключа для цієї бази даних закінчився. Будь ласка, введіть новий ключ.",
   "keyChangeRepeatPassword": "Пароль ще раз",
+  "keyEnter": "Вхід",
   "iconFavTitle": "Завантажити і використовувати іконку сайту",
   "iconSelCustom": "Обрати свою іконку",
   "listEmptyTitle": "Пусто",
@@ -266,6 +258,8 @@
   "detDelFromTrash": "Видалити з кошика?",
   "detDelFromTrashBody": "Ви не зможете скасувати цю операцію.",
   "detDelFromTrashBodyHint": "Щоб швидко видалити весь вміст кошика, натисніть піктограму очищення в меню кошика.",
+  "detDelToTrash": "Видалити запис?",
+  "detDelToTrashBody": "Запис буде перенесено у кошик.",
   "detFieldCopied": "скопійовано",
   "detFieldCopiedTime": "Копіюється {} секунд",
   "detCopyHint": "Ви маєте можливість копіювати значення поля натиснувши мишкою по його назві",
@@ -279,10 +273,11 @@
   "detMenuCopyUser": "Скопіювати логін",
   "detSetupOtp": "Одноразовий пароль",
   "detClone": "Зробити копію",
+  "detCopyEntryToClipboard": "Скопіювати всі поля",
   "detClonedName": "Копіювати",
-  "detAutoType": "Авто-тип",
-  "detAutoTypeSettings": "Налаштування авто-заповнення",
-  "detAutoTypeEnabled": "Увімкнути авто-тип для даного запису",
+  "detAutoType": "Автовведення",
+  "detAutoTypeSettings": "Налаштування автовведення",
+  "detAutoTypeEnabled": "Увімкнути автовведення для даного запису",
   "detAutoTypeSequence": "Натискань клавіш",
   "detAutoTypeInput": "Введення",
   "detAutoTypeShortcutsDesc": "{} або {} в той час як додаток неактивний",
@@ -308,6 +303,9 @@
   "detOtpQrWrongBody": "Ваш QR-код був успішно відсканований, але він не містить даних одноразового пароля.",
   "detLockField": "Заблокувати поле, його зміст буде зкрито і він не буде відображатися в пошуку. Щоб побачити зміст поля треба буде клікнути по ньому.",
   "detUnlockField": "Розблокувати поле, його зміст стане видимий і він буде відображатися в пошуку.",
+  "detRevealField": "Показати",
+  "detHideField": "Сховати",
+  "detAutoTypeField": "Автовведення",
   "autoTypeEntryFields": "Поля запису",
   "autoTypeModifiers": "Клавіші-модифікатори",
   "autoTypeKeys": "Ключі",
@@ -321,6 +319,10 @@
   "autoTypeMsgMatchedByWindow": "Обрати пароль для {}",
   "autoTypeNoMatches": "немає збігів",
   "autoTypeSelectionHint": "Введіть послідовність автовведення",
+  "autoTypeSelectionHintAction": "Ввести тільки пароль",
+  "autoTypeSelectionHintOpt": "Ввести тільки логін",
+  "autoTypeSelectionHintShift": "Інші поля",
+  "autoTypeSelectionOtp": "Одноразовий пароль",
   "appSecWarn": "Не безпечно!",
   "appSecWarnBody1": "Ви завантажили цю программу через незахищене з'єднання. Хтось може спостерігати за вами і вкрасти ваші паролі. Ми наполегливо рекомендуємо вам зупинитися. Ви можете продовжити тільки, якщо ви чітко розумієте, що ви робите.",
   "appSecWarnBody2": "Так, ваша база даних в зашифрованому вигляді, але ніхто не може гарантувати, що програма не була змінена на шляху до вас.",
@@ -375,6 +377,7 @@
   "setGenThemeHc": "Високий контраст",
   "setGenThemeSd": "Вицвіла темна",
   "setGenThemeSl": "Вицвіла світла",
+  "setGenThemeMacDark": "macOS Dark",
   "setGenLocale": "Мова",
   "setGenLocOther": "Інші мови доступні як плагіни",
   "setGenFontSize": "Розмір шрифту",
@@ -388,6 +391,7 @@
   "setGenShowSubgroups": "Показати записи з усіх підгруп",
   "setGenTableView": "Перегляд списку записів у вигляді таблиці",
   "setGenColorfulIcons": "Кольоровий список не стандартних іконок",
+  "setGenDirectAutotype": "Якщо знайдено тільки один запис, вибрати його для автоматичного введення",
   "setGenFunction": "Функції",
   "setGenAutoSyncOnClose": "Автоматично зберігати та синхронізувати при закритті",
   "setGenAutoSyncTimer": "Автоматично зберігати та синхронізувати через деякий період часу",
@@ -411,7 +415,7 @@
   "setGenLock": "Автоматичне блокування",
   "setGenLockMinimize": "Авто блокування при мінімізації",
   "setGenLockCopy": "Блокувати програму після копіювання пароля",
-  "setGenLockAutoType": "Автоматичне блокування при авто-введенні",
+  "setGenLockAutoType": "При автовведенні",
   "setGenLockOrSleep": "Коли комп'ютер заблоковано або відправлено у сон",
   "setGenStorage": "Сховище",
   "setGenShowAdvanced": "Показати додаткові налаштування (ці установки можуть бути небезпечні)",
@@ -432,12 +436,14 @@
   "setFileSync": "Синхр-я",
   "setFileSyncVerb": "Синхронізація",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Остання синх-я",
   "setFileLastSyncUnknown": "невідомо",
   "setFileSyncInProgress": "йде синхронізація",
   "setFileSyncError": "помилка синхр-ї",
   "setFilePass": "Майстер пароль",
   "setFileConfirmPass": "Підтвердити майстер пароль",
+  "setFilePassChange": "для зміни паролю, будь ласка, введіть його в поле підтвердження",
   "setFilePassChanged": "пароль був змінений; залиште поле порожнім, щоб використовувати старий пароль",
   "setFilePassNotMatch": "паролі не збігаються, будь ласка, введіть заново",
   "setFileKeyFile": "Файл ключа",
@@ -483,6 +489,7 @@
   "setFileUnsavedBody": "Є незбережені зміни в цьому файлі",
   "setFileCloseNoSave": "Закрити і втратити зміни",
   "setFileDontClose": "Не закрывати",
+  "setFileFormatVersion": "Формат файлу",
   "setShTitle": "Гарячі клавіші",
   "setShShowAll": "показати усі елементи",
   "setShColors": "показати елементи цього кольору",
@@ -503,8 +510,9 @@
   "setShCopyPassGlobal": "копія пароля (якщо програма працює у фоновому режимі)",
   "setShCopyUserGlobal": "скопіювати користувача (коли програма сгорнута)",
   "setShCopyUrlGlobal": "копія веб-сайту (якщо програма працює у фоновому режимі)",
-  "setShAutoTypeGlobal": "авто-заповнення (коли програма сгорнута)",
+  "setShAutoTypeGlobal": "автовведення (коли програма згорнута)",
   "setShLock": "блокувати базу даних",
+  "setShEdit": "Натисніть нову комбінацію клавіш, щоб встановити їх як гарячу",
   "setPlInstallTitle": "Встановити нові плагіни",
   "setPlInstallDesc": "Плагіни для KeeWeb додають нові функції, теми і мови. Плагіни працюють з тими ж привілеями, що і KeeWeb, вони можуть отримувати і управляти всіма вашими паролями. Ніколи не встановлюйте плагіни, яким ви не довіряєте.",
   "setPlInstallLabel": "URL адреса плагіну",
@@ -573,5 +581,15 @@
   "launcherSave": "Збереження пароля бази даних",
   "launcherFileFilter": "KeePass файли",
   "authPopupRequired": "Спливаючі вікна заблоковані",
-  "authPopupRequiredBody": "Будь ласка, дозвольте спливаючі вікна цьому додатку в вашому браузері."
+  "authPopupRequiredBody": "Будь ласка, дозвольте спливаючі вікна цьому додатку в вашому браузері.",
+  "exportFileInfo": "Інформація про файл",
+  "exportHtmlName": "Ім'я",
+  "exportHtmlDate": "Дата експорту",
+  "exportGenerator": "Програмне забезпечення",
+  "exportDescription": "Цей файл згенеровано з {}.",
+  "importCsvTitle": "Імпорт з CSV",
+  "importCsvRun": "Імпортувати",
+  "importIgnoreField": "Ігнорувати",
+  "importTo": "Записи буде імпортовано в",
+  "importNewFile": "Новий файл"
 }
